--- a/src/main/resources/musics/music.css
+++ b/src/main/resources/musics/music.css
@@ -9,3 +9,7 @@
     background: url("/images/landingBackground.png");
     background-size: 100%;
 }
+
+.musicTitle {
+    color: var(--niceWhite);
+}
