--- a/src/main/resources/tinyjukebox.css
+++ b/src/main/resources/tinyjukebox.css
@@ -1,19 +1,32 @@
+:root {
+    --niceWhite: #f0f0f0;
+}
+
 #miniQueue {
     position: fixed;
     right: 0;
     --border-size: 2px;
-    color: white;
-    border: solid var(--border-size) white;
+    color: var(--niceWhite);
+    border: solid var(--border-size) var(--niceWhite);
     margin-right: calc(var(--border-size) * -1);
     border-radius: 10px;
     border-bottom-right-radius: 0;
     border-top-right-radius: 0;
-    overflow-y: hidden;
-    height: 50%;
+    height: 30%;
 }
 
-#miniQueue:hover {
+#miniQueueContainer {
+    height: 80%;
+    overflow-y: hidden;
+}
+
+#miniQueueContainer:hover {
     overflow-y: auto;
+}
+
+.miniQueueElement {
+    list-style-type: none;
+    font-size: 9pt;
 }
 
 .pagebottom {
